added some changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#medical_qualification"><i class="bx bx-file-blank"></i> <span>medical qualification</span></a></li>
-          <li><a href="#achivements_&_awards"><i class="bx bx-server"></i> Achivements & Awards</a></li>
+          <li><a href="#achievements_&_awards"><i class="bx bx-server"></i> Achivements & Awards</a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
