--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="./assets/img/haribhaiya.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Dr. Harimohan Kumar Singh</a></h1>
+        <img src="./assets/img/harihome4.jpeg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Dr. Harimohan Kumar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -75,8 +75,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Dr. Harimohan Singh</h1>
-      <p>I'm <span class="typed" data-typed-items="General physician, Counselor"></span></p>
+      <h1>Dr. Harimohan kumar</h1>
+      <h6><p>A sound mind is the best friend : <b>counselling available</b></p></h6>
+      <h3> <p>I'm <span class="typed" data-typed-items="General physician"></span></p></h3>
     </div>
   </section><!-- End Hero -->
 
