added the icons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/icon.png" rel="icon">
+  <link href="assets/img/icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -206,27 +206,27 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
+            <div class="icon"><i class="icofont-medal-sport"></i></div>
             <h4 class="title"><a href="">Gold medals</a></h4>
             <p class="description"></p>Medicine, Paediatric, obstetrics & Gynaecology</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
+            <div class="icon"><i class="icofont-win-trophy"></i></div>
             <h4 class="title"><a href="">Topper</a></h4>
             <p class="description">In the final year and all 4 years of MBBS</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
+            <div class="icon"><i class="icofont-live-support"></i></div>
             <h4 class="title"><a href="">Live Sessions</a></h4>
             <p class="description">Attended advanced life support cource at paras hospital, Patna. Attended CME on diabetes at AIIMS, Patna.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
-            <h4 class="title"><a href="">NEET PG-2020</a></h4>
+            <div class="icon"><i class="icofont-medical-sign-alt"></i></div>
+            <h4 class="title"><a href="">NEET PG</a></h4>
             <p class="description">Allorted as psychiatry of PMCH through NEET PG-2020</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
+            <div class="icon"><i class="icofont-football-alt"></i></div>
             <h4 class="title"><a href="">Games</a></h4>
             <p class="description">National level player of Volleyball</p>
           </div>
