added the changes required

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a 28 years old young doctor from PMCH Patna with a golden record of 5 Gold medals throughout the medical study at PMCH. This made me the "Youngest Achiver of the Largest Number of Gold medals" in the entire state of Bihar. Now, I am a medical officer of PMCH to serve the people of my own Bihar.</p>
+          <p>I am a 25 years old young doctor from PMCH Patna with a golden record of 5 Gold medals throughout the medical study at PMCH. This made me one of the "Youngest Achiver of the highest Number of Gold medals" in the entire state of Bihar in a session. As of now, I am a medical officer of PMCH to serve the mankind.</p>
         </div>
 
         <div class="row">
@@ -106,12 +106,12 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.drharimogansingh.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +918877700259</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> PMCH, Patna, Bihar,India</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Patna Medical College and Hospital(PMCH), Patna, Bihar,India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MBBS</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MBBS(internship)</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> drharimohanpmch2014@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Language:</strong> English and Hindi(speak and write)</li>
                 </ul>
@@ -171,7 +171,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="medical_qualification-title">Professional Experience</h3>
             <div class="medical_qualification-item">
-              <h4>Handeled As Intern</h4>
+              <h4>Handled As Intern</h4>
               <h5>2019 - Present</h5>
               <p><em>Fresher </em></p>
               <ul>
@@ -202,7 +202,7 @@
 
         <div class="section-title">
           <h2>Achievements & Awards</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -248,7 +248,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -276,9 +276,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="./assets/img/haripoat2.jpeg" class="img-fluid" alt="">
+              <img src="./assets/img/hariabout2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/haripoat2.jpeg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/hariabout2.jpeg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -316,9 +316,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/haripoat2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/haripoat2.jpeg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -326,9 +326,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="./assets/img/hariabout3.jpeg" class="img-fluid" alt="">
+              <img src="./assets/img/harimedia1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/hariabout3.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/harimedia1.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -346,9 +346,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/hariabout3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/hariabout3.jpeg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
